--- a/src/containers/education/Education.scss
+++ b/src/containers/education/Education.scss
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: column;
   padding-top: 0;
+  margin-top: 2rem;
 }
 
 @media (max-width: 1380px) {
